# mdmr

./: LICENSE  README.md  pyproject.toml
cgmd/: cgmd.py
cgmd-paper/: README.md  run.sh
cgmd-paper/configs/datasets/ctc/: DIC-C2DH-HeLa.yaml  PhC-C2DH-U373.yaml
cgmd-paper/src/cgmd_paper/datasets/: base.py  ctc_dataset.py
cgmd-paper/src/cgmd_paper/evaluation/: ctc_seg.py
cgmd-paper/src/cgmd_paper/features/: cellpose_styles.py
cgmd-paper/src/cgmd_paper/scripts/: eval_pretrained.py  fine_tune.py  summarize_results.py  train_fully_supervised.py
cgmd-paper/src/cgmd_paper/selectors/: base.py  cgmd_selector.py  core_set_selector.py  fads_selector.py  loader.py
cgmd-paper/src/cgmd_paper/training/: cellpose_train.py
cgmd-paper/src/cgmd_paper/utils/: io.py
mdmr/: __init__.py  mdmr.py
mdmr-paper/: README.md  run.sh
mdmr-paper/configs/datasets/ctc/: BF-C2DL-HSC.yaml  Fluo-N2DH-GOWT1.yaml
mdmr-paper/src/mdmr_paper/datasets/: __init__.py
mdmr-paper/src/mdmr_paper/evaluation/: __init__.py  registry.py
mdmr-paper/src/mdmr_paper/scripts/: eval_pretrained.py  fine_tune.py  summarize_results.py  train_fully_supervised.py
mdmr-paper/src/mdmr_paper/selectors/: dpp_selector.py  facility_location_selector.py  kmeans_clustering_selector.py  loader.py  mdmr_selector.py  random_selector.py  typiclust_selector.py
mdmr-paper/src/mdmr_paper/utils/: logging.py  seed.py
